# libfwps

./: .codecov.yml  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfwps-wiki.ini  libfwps.ini  libfwps.pc.in  libfwps.spec.in  setup.cfg.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh  tox.ini
.github/workflows/: build_ossfuzz.yml
.travis/: runtests.sh  script.sh
documentation/: Windows Property Store format.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libfwps.h.in
include/libfwps/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfwps/: Makefile.am  libfwps.c  libfwps.rc.in  libfwps_codepage.h  libfwps_debug.c  libfwps_debug.h  libfwps_definitions.h.in  libfwps_error.c  libfwps_error.h  libfwps_extern.h  libfwps_format_class_identifier.c  libfwps_format_class_identifier.h  libfwps_libcdata.h  libfwps_libcerror.h  libfwps_libcnotify.h  libfwps_libcstring.h  libfwps_libfguid.h  libfwps_libfole.h  libfwps_libuna.h  libfwps_notify.c  libfwps_notify.h  libfwps_property_identifier.c  libfwps_property_identifier.h  libfwps_record.c  libfwps_record.h  libfwps_set.c  libfwps_set.h  libfwps_storage.c  libfwps_storage.h  libfwps_store.c  libfwps_store.h  libfwps_support.c  libfwps_support.h  libfwps_types.h  libfwps_unused.h  libfwps_value.c  libfwps_value.h
manuals/: Makefile.am  libfwps.3
msvscpp/: Makefile.am  libfwps.sln
msvscpp/fwps_test_error/: fwps_test_error.vcproj
msvscpp/fwps_test_get_version/: fwps_test_get_version.vcproj
msvscpp/fwps_test_notify/: fwps_test_notify.vcproj
msvscpp/fwps_test_property_identifier/: fwps_test_property_identifier.vcproj
msvscpp/fwps_test_record/: fwps_test_record.vcproj
msvscpp/fwps_test_set/: fwps_test_set.vcproj
msvscpp/fwps_test_storage/: fwps_test_storage.vcproj
msvscpp/fwps_test_store/: fwps_test_store.vcproj
msvscpp/fwps_test_support/: fwps_test_support.vcproj
msvscpp/fwps_test_value/: fwps_test_value.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfdatetime/: libfdatetime.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libfole/: libfole.vcproj
msvscpp/libfwps/: libfwps.vcproj
msvscpp/libuna/: libuna.vcproj
msvscpp/pyfwps/: pyfwps.vcproj
ossfuzz/: Makefile.am  ossfuzz_libfwps.h  record_fuzzer.cc  set_fuzzer.cc  storage_fuzzer.cc  store_fuzzer.cc
pyfwps/: Makefile.am  pyfwps.c  pyfwps.h  pyfwps_codepage.c  pyfwps_codepage.h  pyfwps_error.c  pyfwps_error.h  pyfwps_guid.c  pyfwps_guid.h  pyfwps_integer.c  pyfwps_integer.h  pyfwps_libcerror.h  pyfwps_libclocale.h  pyfwps_libcstring.h  pyfwps_libfguid.h  pyfwps_libfwps.h  pyfwps_libuna.h  pyfwps_python.h  pyfwps_record.c  pyfwps_record.h  pyfwps_records.c  pyfwps_records.h  pyfwps_set.c  pyfwps_set.h  pyfwps_sets.c  pyfwps_sets.h  pyfwps_storage.c  pyfwps_storage.h  pyfwps_store.c  pyfwps_store.h  pyfwps_string.c  pyfwps_string.h  pyfwps_unused.h  setup.py.in
pyfwps-python2/: Makefile.am
pyfwps-python3/: Makefile.am
pyfwps3/: Makefile.am
tests/: Makefile.am  fwps_test_error.c  fwps_test_get_version.c  fwps_test_libcerror.h  fwps_test_libcstring.h  fwps_test_libfwps.h  fwps_test_macros.h  fwps_test_memory.c  fwps_test_memory.h  fwps_test_notify.c  fwps_test_property_identifier.c  fwps_test_record.c  fwps_test_set.c  fwps_test_storage.c  fwps_test_store.c  fwps_test_support.c  fwps_test_unused.h  fwps_test_value.c  pkgbuild.sh  pyfwps_test_record.py  pyfwps_test_set.py  pyfwps_test_storage.py  pyfwps_test_store.py  pyfwps_test_support.py  runtests.py  runtests.sh  syncsharedlibs.sh  test_api_types.ps1  test_api_types.sh  test_library.ps1  test_library.sh  test_python_module.sh
tests/data/: record.1  record.2  sheet.1  store.1
