MSVSCPP_FILES = \
	fwps_test_error/fwps_test_error.vcproj \
	fwps_test_get_version/fwps_test_get_version.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcstring/libcstring.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfole/libfole.vcproj \
	libfwps/libfwps.vcproj \
	libuna/libuna.vcproj \
	pyfwps/pyfwps.vcproj \
	libfwps.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

