MSVSCPP_FILES = \
	fwps_test_error/fwps_test_error.vcproj \
	fwps_test_property_identifier/fwps_test_property_identifier.vcproj \
	fwps_test_storage/fwps_test_storage.vcproj \
	fwps_test_support/fwps_test_support.vcproj \
	fwps_test_value/fwps_test_value.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfole/libfole.vcproj \
	libfwps/libfwps.vcproj \
	libuna/libuna.vcproj \
	pyfwps/pyfwps.vcproj \
	libfwps.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

