MSVSCPP_FILES = \
	fwps_test_error/fwps_test_error.vcproj \
	fwps_test_property_identifier/fwps_test_property_identifier.vcproj \
	fwps_test_record/fwps_test_record.vcproj \
	fwps_test_set/fwps_test_set.vcproj \
	fwps_test_storage/fwps_test_storage.vcproj \
	fwps_test_store/fwps_test_store.vcproj \
	fwps_test_support/fwps_test_support.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfole/libfole.vcproj \
	libfwps/libfwps.vcproj \
	libuna/libuna.vcproj \
	pyfwps/pyfwps.vcproj \
	libfwps.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

